RESOLVED FIXED183718
RenderTreeNeedsLayoutChecker fails with absolutely positioned svg and <use>
https://bugs.webkit.org/show_bug.cgi?id=183718
Summary RenderTreeNeedsLayoutChecker fails with absolutely positioned svg and <use>
alan
Reported 2018-03-16 20:12:28 PDT
Created attachment 335992 [details] Test reduction ssia.
Attachments
Test reduction (495 bytes, text/html)
2018-03-16 20:12 PDT, alan
no flags
Patch (7.64 KB, patch)
2018-03-20 14:32 PDT, alan
no flags
Patch (7.69 KB, patch)
2018-03-20 15:15 PDT, alan
no flags
Patch (7.72 KB, patch)
2018-03-20 15:53 PDT, alan
no flags
alan
Comment 1 2018-03-20 14:32:34 PDT
Antti Koivisto
Comment 2 2018-03-20 14:39:51 PDT
Comment on attachment 336151 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=336151&action=review > Source/WebCore/css/StyleResolver.cpp:816 > + if (svgElement.hasTagName(SVGNames::svgTag) && (!svgElement.parentNode() || svgElement.parentNode()->isSVGElement() || svgElement.correspondingElement())) The original test is if (!(element->hasTagName(SVGNames::svgTag) && element->parentNode() && !element->parentNode()->isSVGElement())) This doesn't seem like the same.
alan
Comment 3 2018-03-20 15:15:59 PDT
alan
Comment 4 2018-03-20 15:53:48 PDT
WebKit Commit Bot
Comment 5 2018-03-20 18:31:14 PDT
Comment on attachment 336160 [details] Patch Clearing flags on attachment: 336160 Committed r229782: <https://trac.webkit.org/changeset/229782>
WebKit Commit Bot
Comment 6 2018-03-20 18:31:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-03-20 18:32:27 PDT
Note You need to log in before you can comment on or make changes to this bug.